--- a/PLPullPlayer/Podfile
+++ b/PLPullPlayer/Podfile
@@ -5,11 +5,9 @@ target 'PLPullPlayer' do
   # Comment the next line if you don't want to use dynamic frameworks
   # use_frameworks!
 
-  # 金山云推流
-  pod 'libksygpulive/libksygpulive'
   # 七牛云拉流
   # pod 'PLPlayerKit', '~> 3.4.3'
-  # pod "PLPlayerKit", :podspec =>'https://raw.githubusercontent.com/pili-engineering/PLPlayerKit/master/PLPlayerKit-Universal.podspec'
+  pod "PLPlayerKit", :podspec => 'https://raw.githubusercontent.com/pili-engineering/PLPlayerKit/master/PLPlayerKit-Universal.podspec'
   pod 'Masonry', '~> 1.1.0'
   pod 'MSWeakTimer', '~> 1.1.0'
   pod 'SDCycleScrollView', '~> 1.80'
