--- a/PLPullPlayer/Podfile
+++ b/PLPullPlayer/Podfile
@@ -5,8 +5,10 @@ target 'PLPullPlayer' do
   # Comment the next line if you don't want to use dynamic frameworks
   # use_frameworks!
 
+  pod 'libksygpulive/libksygpulive'
   # 七牛云拉流
   # pod 'PLPlayerKit', '~> 3.4.3'
+  # 真机和模拟器可以运行
   pod "PLPlayerKit", :podspec => 'https://raw.githubusercontent.com/pili-engineering/PLPlayerKit/master/PLPlayerKit-Universal.podspec'
   pod 'Masonry', '~> 1.1.0'
   pod 'MSWeakTimer', '~> 1.1.0'
